# setrem-robot

./: .gitignore  README.md
cloud/: .env.example  docker-compose.yml
cloud/ingestor/: Dockerfile  main.py  requirements.txt
cloud/mosquitto/config/: mosquitto.conf
cloud/timescaledb/init/: 01_schema.sql
docs/: README.md  contrato-mqtt.md  setup-cloud.md  setup-esp32.md  setup-pi.md
esp32/esp32_bt_bridge/: esp32_bt_bridge.ino
pi/: docker-compose.yml
pi/mosquitto/config/: mosquitto.conf
pi/mosquitto/config/conf.d/: bridge.conf.example
pi/scripts/: install.sh
pi/services/_common/: pyproject.toml
pi/services/_common/src/robo_common/: __init__.py  mqtt_client.py  topics.py
pi/services/gps/: pyproject.toml
pi/services/gps/src/gps/: __init__.py  main.py
pi/services/orquestrador/: pyproject.toml
pi/services/orquestrador/src/orquestrador/: __init__.py  main.py  roteador.py
pi/services/serial_ingestor/: pyproject.toml
pi/services/serial_ingestor/src/serial_ingestor/: __init__.py  main.py
pi/services/wifi/: pyproject.toml
pi/services/wifi/src/wifi/: __init__.py  main.py  rede.py
pi/systemd/: robo-gps.service  robo-orquestrador.service  robo-serial-ingestor.service  robo-wifi.service
scripts/: gen-mosquitto-passwd.sh
