[project]
name = "robo-common"
version = "0.1.0"
description = "Biblioteca compartilhada entre os serviços do robô: nomes de tópicos MQTT e cliente MQTT padronizado."
requires-python = ">=3.11"
dependencies = [
    "paho-mqtt>=2.1",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
