[project]
name = "orquestrador"
version = "0.1.0"
description = "Cérebro de roteamento do robô: recebe comandos do app (via barramento MQTT) e os encaminha para os tópicos de domínio; espelha telemetria para a nuvem."
requires-python = ">=3.11"
dependencies = [
    # Lib compartilhada local. É instalada em modo editável ANTES deste serviço
    # (ver pi/scripts/install.sh); por isso o pip a encontra já satisfeita e
    # não tenta buscá-la no PyPI.
    "robo-common",
]

[project.scripts]
orquestrador = "orquestrador.main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
