[project]
name = "serial-ingestor"
version = "0.1.0"
description = "Lê NDJSON da serial do ESP32 e publica no broker MQTT local do robô."
requires-python = ">=3.11"
dependencies = [
    "pyserial>=3.5",
    # Lib compartilhada local. É instalada em modo editável ANTES deste serviço
    # (ver pi/scripts/install.sh); por isso o pip a encontra já satisfeita e
    # não tenta buscá-la no PyPI.
    "robo-common",
]

[project.scripts]
serial-ingestor = "serial_ingestor.main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
