[project]
name = "wifi"
version = "0.1.0"
description = "Provisionamento de Wi-Fi do robô: recebe SSID e senha pelo barramento MQTT (comando vindo do app via ESP32) e aplica com nmcli."
requires-python = ">=3.11"
dependencies = [
    # Sem dependências externas: usa só a stdlib (subprocess para o nmcli) e a
    # lib compartilhada local.
    "robo-common",
]

[project.scripts]
wifi = "wifi.main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
